--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
+    "mssql": "^10.0.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
