--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.2",
     "config": "^3.3.10",
+    "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mssql": "^10.0.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.9.3",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
